<resources>
    <string name="app_name">Irp</string>
    <string name="tvtitleacceso">Ingresar</string>
    <string name="txt_cedula">Cedula</string>
    <string name="content_cedula_end_icon">CI</string>
    <string name="content_password_end_icon">Contraseña</string>
    <string name="btn_login">Login</string>
    <string name="crear_cuenta">Registrar nuevo Usuario</string>
    <string name="title_activity_ejercicio">EjercicioActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="action_add_ejercicio">Nuevo ejercicio</string>
    <string name="txthint_ruc">Ruc</string>
    <string name="txthint_nombrecontribu">Nombre y Apellido</string>
    <string name="volver_login">Si ya está registrado ingrese aquí.</string>
    <string name="btn_registrar">Registrame</string>
    <string name="tituloRegistro">::Registro de Contribuyente::</string>
    <string name="title_menu_principal_drawer">Menú Principal</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_nav_tipocomprobante">Tipo Comprobante</string>
    <string name="title_navigation_tipocomprobante">Tipo de Comprobante</string>
    <string name="title_nav_cliente">Cliente</string>
    <string name="title_navigation_cliente">Clientes</string>
    <string name="title_navigation_clasingreso">Clasificación de Ingreso</string>
    <string name="title_nav_clasingeso">Clasif. Ingreso</string>
    <string name="tituloRegistroCliente">Registro de Clientes</string>
    <string name="txthint_DivCliente">Dv</string>
    <string name="btn_registrarcliente">Grabar</string>
    <string name="tituloRegistroClasIngreso">Registro Clasificación de Ingreso</string>
    <string name="txthint_descricpionClasIngreso">Descripción</string>
    <string name="btn_registrartipocomprobante">Grabar</string>
    <string name="txthint_descricpionTipoComprobante">Descripción</string>
    <string name="tituloRegistroTipoComprobante">Registro Tipo de Comprobante</string>
    <string name="title_activity_menu_ref_compra">MenuRefCompraActivity</string>
    <string name="title_nav_proveedor">Proveedor</string>
    <string name="title_navigation_proveedor">Proveedor</string>
    <string name="title_navigation_tipoegreso">Tipo Egreso</string>
    <string name="title_navigation_clasegreso">Clasif. Egreso</string>
    <string name="tituloRegistroProveedor">Registro de Proveedor</string>
    <string name="tituloRegistroTipoEgreso">Registro Tipo de Egreso</string>
    <string name="tituloRegistroClasEgreso">Registro Clasificación de Egreso</string>
    <string name="txthint_TipoEgreso">Seleccione Tipo Egreso</string>
    <string name="tituloPerfilUsuario">MIS DATOS</string>
    <string name="btn_actualizaPassword">Actualizar Contraseña</string>
    <string name="title_activity_menu_mov_venta">MenuMovVentaActivity</string>
    <string name="title_nav_cargaventa">Ingreso</string>
    <string name="title_nav_buscaventa">Busqueda Ingreso</string>
    <string name="title_navigation_cargaventa">Carga Ingreso</string>
    <string name="title_navigation_buscaventa">Busqueda Ingreso</string>
    <string name="title_activity_menu_mov_compra">MenuMovCompraActivity</string>
    <string name="title_nav_cargacompra">Egreso</string>
    <string name="title_nav_buscacompra">Busqueda Egreso</string>
    <string name="title_navigation_cargacompra">Egresos</string>
    <string name="title_navigation_buscacompra">Busqueda Egreso</string>

</resources>
