<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_proveedor">

    <fragment
        android:id="@+id/navigation_proveedor"
        android:name="com.proyecto.irp.ui.proveedor.ProveedorFragment"
        android:label="@string/title_navigation_proveedor"
        tools:layout="@layout/fragment_proveedor" />

    <fragment
        android:id="@+id/navigation_tipoegreso"
        android:name="com.proyecto.irp.ui.tipoegreso.TipoEgresoFragment"
        android:label="@string/title_navigation_tipoegreso"
        tools:layout="@layout/fragment_tipo_egreso" />

    <fragment
        android:id="@+id/navigation_clasegreso"
        android:name="com.proyecto.irp.ui.clasegreso.ClasEgresoFragment"
        android:label="@string/title_navigation_clasegreso"
        tools:layout="@layout/fragment_clasegreso" />
</navigation>
