<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_cliente">

    <fragment
        android:id="@+id/navigation_cliente"
        android:name="com.proyecto.irp.ui.cliente.ClienteFragment"
        android:label="@string/title_navigation_cliente"
        tools:layout="@layout/fragment_cliente" />

    <!--
       <fragment
           android:id="@+id/navigation_home"
           android:name="com.proyecto.irp.ui.EjercicioFragment"
           android:label="@string/title_notifications"
           tools:layout="@layout/fragment_ejercicio" />
   -->
    <fragment
        android:id="@+id/navigation_clasingreso"
        android:name="com.proyecto.irp.ui.clasingreso.ClasIngresoFragment"
        android:label="@string/title_navigation_clasingreso"
        tools:layout="@layout/fragment_clasingreso" />

    <fragment
        android:id="@+id/navigation_tipocomprobante"
        android:name="com.proyecto.irp.ui.tipocomprobante.TipoComprobanteFragment"
        android:label="@string/title_navigation_tipocomprobante"
        tools:layout="@layout/fragment_tipo_comprobante" />


</navigation>
