<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFondo"
    tools:context=".ui.MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toTopOf="@+id/txtInputCedula"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:srcCompat="@drawable/ic_irplogo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInputCedula"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/txt_cedula"
        android:textColor="@color/colorEditText"
        android:textColorHighlight="@color/colorEditText"
        android:textColorHint="@color/colorEditText"
        android:textColorLink="@color/colorEditText"
        android:textCursorDrawable="@color/colorEditText"
        app:counterEnabled="true"
        app:counterMaxLength="7"
        app:errorEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/txtInputContrasenha"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:startIconContentDescription="@string/content_cedula_end_icon"
        app:startIconDrawable="@drawable/ic_cedula">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtCedula"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:imeOptions="actionNext"
            android:singleLine="true"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInputContrasenha"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="Contraseña"
        android:textColor="@color/colorEditText"
        android:textColorHighlight="@color/colorEditText"
        android:textColorHint="@color/colorEditText"
        android:textColorLink="@color/colorEditText"
        android:textCursorDrawable="@color/colorEditText"
        app:counterEnabled="true"
        app:counterMaxLength="8"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/btnLogin"
        app:layout_constraintEnd_toEndOf="@+id/txtInputCedula"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/txtInputCedula"
        app:layout_constraintTop_toBottomOf="@+id/txtInputCedula"
        app:startIconContentDescription="@string/content_password_end_icon"
        app:startIconDrawable="@drawable/ic_contrasena">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtContrasena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="12dp"
        android:text="@string/btn_login"
        android:textAllCaps="false"
        android:textColor="@color/colorButton"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/tvRegistrarContribuyente"
        app:layout_constraintEnd_toEndOf="@+id/txtInputContrasenha"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/txtInputContrasenha"
        app:layout_constraintTop_toBottomOf="@+id/txtInputContrasenha" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvRegistrarContribuyente"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        android:text="@string/crear_cuenta"
        android:textColor="@color/colorTextView"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnLogin"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/btnLogin"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

</androidx.constraintlayout.widget.ConstraintLayout>
