<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFondo"
    tools:context=".ui.MainActivity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvtituloregistro"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/tituloRegistro"
        android:textColor="@color/colorTextView"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/txtInputCedulaContribuyente"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInputCedulaContribuyente"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/txt_cedula"
        android:textColor="@color/colorEditText"
        android:textColorHighlight="@color/colorEditText"
        android:textColorHint="@color/colorEditText"
        android:textColorLink="@color/colorEditText"
        android:textCursorDrawable="@color/colorEditText"
        app:counterEnabled="true"
        app:counterMaxLength="7"
        app:errorEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/txtInputRucContribuyente"
        app:layout_constraintEnd_toEndOf="@+id/tvtituloregistro"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/tvtituloregistro"
        app:layout_constraintTop_toBottomOf="@+id/tvtituloregistro"
        app:startIconContentDescription="@string/content_cedula_end_icon"
        app:startIconDrawable="@drawable/ic_cedula">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtCedulaContribuyente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:singleLine="true"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInputRucContribuyente"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/txthint_ruc"
        android:textColor="@color/colorEditText"
        android:textColorHighlight="@color/colorEditText"
        android:textColorHint="@color/colorEditText"
        android:textColorLink="@color/colorEditText"
        android:textCursorDrawable="@color/colorEditText"
        app:counterEnabled="true"
        app:counterMaxLength="12"
        app:errorEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/txtInputNombreContribuyente"
        app:layout_constraintEnd_toEndOf="@+id/txtInputCedulaContribuyente"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/txtInputCedulaContribuyente"
        app:layout_constraintTop_toBottomOf="@+id/txtInputCedulaContribuyente"
        app:startIconContentDescription="@string/content_cedula_end_icon"
        app:startIconDrawable="@drawable/ic_cedula">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtRucContribuyente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:singleLine="true"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInputNombreContribuyente"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/txthint_nombrecontribu"
        android:textColor="@color/colorEditText"
        android:textColorHighlight="@color/colorEditText"
        android:textColorHint="@color/colorEditText"
        android:textColorLink="@color/colorEditText"
        android:textCursorDrawable="@color/colorEditText"
        app:counterEnabled="true"
        app:counterMaxLength="40"
        app:errorEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/txtInputContrasenha"
        app:layout_constraintEnd_toEndOf="@+id/txtInputRucContribuyente"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/txtInputRucContribuyente"
        app:layout_constraintTop_toBottomOf="@+id/txtInputRucContribuyente"
        app:startIconContentDescription="@string/content_cedula_end_icon"
        app:startIconDrawable="@drawable/ic_cedula">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtNombreContribuyente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:singleLine="true"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInputContrasenha"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="Contraseña"
        android:textColor="@color/colorEditText"
        android:textColorHighlight="@color/colorEditText"
        android:textColorHint="@color/colorEditText"
        android:textColorLink="@color/colorEditText"
        android:textCursorDrawable="@color/colorEditText"
        app:counterEnabled="true"
        app:counterMaxLength="8"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/txtInputNombreContribuyente"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/txtInputNombreContribuyente"
        app:layout_constraintTop_toBottomOf="@+id/txtInputNombreContribuyente"
        app:startIconContentDescription="@string/content_password_end_icon"
        app:startIconDrawable="@drawable/ic_contrasena">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtContrasena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
