<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFondo"
    tools:context=".ui.clasingreso.ClasIngresoAddActivity">


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvtituloregistroclasingreso"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:gravity="center|top"
        android:text="@string/tituloRegistroClasIngreso"
        android:textAlignment="inherit"
        android:textColor="@color/colorTextView"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/txtInputDescripcionClasIngreso"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInputDescripcionClasIngreso"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/txthint_descricpionClasIngreso"
        android:textColor="@color/colorEditText"
        android:textColorHighlight="@color/colorEditText"
        android:textColorHint="@color/colorEditText"
        android:textColorLink="@color/colorEditText"
        android:textCursorDrawable="@color/colorEditText"
        app:counterEnabled="true"
        app:counterMaxLength="180"
        app:errorEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/btnGrabaClasIngreso"
        app:layout_constraintEnd_toEndOf="@+id/tvtituloregistroclasingreso"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/tvtituloregistroclasingreso"
        app:layout_constraintTop_toBottomOf="@+id/tvtituloregistroclasingreso">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtDescripcionClasIngreso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:singleLine="false" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGrabaClasIngreso"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:text="@string/btn_registrarcliente"
        android:textAllCaps="false"
        android:textColor="@color/colorButton"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/txtInputDescripcionClasIngreso"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/txtInputDescripcionClasIngreso"
        app:layout_constraintTop_toBottomOf="@+id/txtInputDescripcionClasIngreso" />


</androidx.constraintlayout.widget.ConstraintLayout>