<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFondo"
    tools:context=".ui.cliente.ClienteAddActivity">


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvtituloregistrocliente"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:gravity="center|top"
        android:text="@string/tituloRegistroCliente"
        android:textAlignment="inherit"
        android:textColor="@color/colorTextView"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/txtInputNombreCliente"
        app:layout_constraintEnd_toEndOf="@+id/tvtituloregistrocliente"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/tvtituloregistrocliente"
        app:layout_constraintTop_toBottomOf="@+id/tvtituloregistrocliente">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInputRucVeriCliente"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:hint="CI/RUC : Sin Guion"
            android:textColor="@color/colorEditText"
            android:textColorHighlight="@color/colorEditText"
            android:textColorHint="@color/colorEditText"
            android:textColorLink="@color/colorEditText"
            android:textCursorDrawable="@color/colorEditText"
            app:counterEnabled="true"
            app:counterMaxLength="12"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:startIconContentDescription="@string/content_cedula_end_icon"
            app:startIconDrawable="@drawable/ic_cedula"
            tools:layout_editor_absoluteY="188dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtRucVeriCliente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInputRucDivCliente"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:hint="@string/txthint_DivCliente"
            android:textColor="@color/colorEditText"
            android:textColorHighlight="@color/colorEditText"
            android:textColorHint="@color/colorEditText"
            android:textColorLink="@color/colorEditText"
            android:textCursorDrawable="@color/colorEditText"
            app:counterEnabled="true"
            app:counterMaxLength="1"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="188dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtRucDivCliente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInputNombreCliente"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:hint="@string/txthint_nombrecontribu"
        android:textColor="@color/colorEditText"
        android:textColorHighlight="@color/colorEditText"
        android:textColorHint="@color/colorEditText"
        android:textColorLink="@color/colorEditText"
        android:textCursorDrawable="@color/colorEditText"
        app:counterEnabled="true"
        app:counterMaxLength="40"
        app:errorEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/rbgTipoCliente"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:startIconContentDescription="@string/content_cedula_end_icon"
        app:startIconDrawable="@drawable/ic_cedula">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtNombreCliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/rbgTipoCliente"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:gravity="center_horizontal"
        android:imeOptions="actionNext"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/btnGrabaCliente"
        app:layout_constraintEnd_toEndOf="@+id/txtInputNombreCliente"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/txtInputNombreCliente"
        app:layout_constraintTop_toBottomOf="@+id/txtInputNombreCliente">

        <RadioButton
            android:id="@+id/rbFisica"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:paddingEnd="30dp"
            android:singleLine="true"
            android:text="Fisica"
            android:textSize="16dp" />

        <RadioButton
            android:id="@+id/rbJuridica"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:paddingEnd="10dp"
            android:singleLine="true"
            android:text="Juridica"
            android:textSize="16dp" />
    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGrabaCliente"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:text="@string/btn_registrarcliente"
        android:textAllCaps="false"
        android:textColor="@color/colorButton"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/rbgTipoCliente"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/rbgTipoCliente"
        app:layout_constraintTop_toBottomOf="@+id/rbgTipoCliente" />


</androidx.constraintlayout.widget.ConstraintLayout>